es-fleet-server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-server
spec:
  entryPoints:
    - fleet-server
  routes:
    - match: Host(`fleet.services.sbling.net`)
      kind: Rule
      services:
        - name: fleet-server
          port: 8220
  tls:
    secretName: fleet-services-sbling-net-prod-cert
